# HockusPockus

./: .travis.yml  Doxyfile  LICENSE  README.md  Visionconfig.json  posProcess.cpp
main/: CMakeLists.txt  README.md  package.xml
main/launch/: main.launch  main.launch.orig  mainPC.launch  mainPi.launch
motor_controls/: CMakeLists.txt  README.md  package.xml
motor_controls/config/: motor.cfg
motor_controls/launch/: motor.launch
motor_controls/src/: follow_x.cpp  motor_control.cpp  motor_controls.cpp
score/: CMakeLists.txt  CMakeLists.txt.orig  README.md  package.xml  package.xml.orig  score.sln
score/UML/: InterfacesImplementations.drawio
score/config/: score.cfg
score/doxygen/: DoxygenHockusPockusScore
score/doxygen/html/: _game_8h_source.html  _goal_8h_source.html  _goal_sensor_base_8h_source.html  _goal_sensor_sonar_8h_source.html  _player_8h_source.html  _player_manager_8h_source.html  _r_o_s__topic_names_8h_source.html  annotated.html  annotated_dup.js  class_game-members.html  class_game.html  class_game.js  class_goal-members.html  class_goal.html  class_goal.js  class_goal_sensor_base-members.html  class_goal_sensor_base.html  class_goal_sensor_base.js  class_goal_sensor_sonar-members.html  class_goal_sensor_sonar.html  class_goal_sensor_sonar.js  class_new_game_listener-members.html  class_new_game_listener.html  class_new_game_listener.js  class_player-members.html  class_player.html  class_player.js  class_player_manager-members.html  class_player_manager.html  class_player_manager.js  class_sonar-members.html  class_sonar.html  class_sonar.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  files.html  functions.html  functions_func.html  hierarchy.html  (+5 more)
score/doxygen/latex/: annotated.tex  class_game.tex  class_goal.tex  class_goal_sensor_base.eps  class_goal_sensor_base.tex  class_goal_sensor_sonar.eps  class_goal_sensor_sonar.tex  class_new_game_listener.tex  class_player.tex  class_player_manager.tex  class_sonar.tex  hierarchy.tex  refman.tex
score/doxygen/rtf/: refman.rtf
score/include/: Game.h
score/launch/: score.launch  score.launch.orig
score/score/: Game.cpp  Game.h  Goal.cpp  Goal.h  GoalBuilder.h  Player.cpp  Player.h  PlayerManager.cpp  PlayerManager.h  mainScore.cpp  score.vcxproj  score.vcxproj.filters
score/src/: Game.cpp  Game.cpp.orig  Game.h  Game.h.orig  Goal.cpp  Goal.cpp.orig  Goal.h  Goal.h.orig  GoalBuilder.cpp  GoalSensorBase.cpp  GoalSensorBase.cpp.orig  GoalSensorBase.h  GoalSensorBase.h.orig  GoalSensorSonar.cpp  GoalSensorSonar.cpp.orig  GoalSensorSonar.h  GoalSensorSonar.h.orig  Player.cpp  Player.cpp.orig  Player.h  Player.h.orig  PlayerManager.cpp  PlayerManager.cpp.orig  PlayerManager.h  PlayerManager.h.orig  ROS_topicNames.h  ROS_topicNames.h.orig  SR04.cpp  SR04.h  libSonar.cpp  mainScore.cpp  mainScore.cpp.orig  score.vcxproj  score.vcxproj.filters
strategy/: CMakeLists.txt  README.md  package.xml  posProcess.cpp
strategy/config/: strategy.cfg
strategy/include/: FollowX.h  FollowXAndAttack.h  FollowXWithReboundHandler.h  ReboundHandler.h  Strategy.h  Terrain.h  Vector2.h  Vector3.h
strategy/launch/: strategy.launch
strategy/src/: FollowX.cpp  FollowXAndAttack.cpp  FollowXWithReboundHandler.cpp  ReboundHandler.cpp  Strategy.cpp  mainStrategy.cpp
ui/: CMakeLists.txt  README.md  package.xml
ui/launch/: ui.launch
ui/old/: index.html  ros.js  style.css  ui.sh
ui/src/: dev.css  dev.html  index.html  manual.html  manual.js  ros.js  rules.html  server.py  style.css  ui.sh
ui/src/css/: style.css
ui/src/html/: index.html  rules.html  settings.html  webcam.html
ui/src/js/: dynamic_reconfigure.js  game.js  index.js  joystick.js  parameter_server.js  ros.js  settings.js  storage.js  webcam.js
ui/src/resources/: logoEquipeCLEAN.xcf
ui/src/scripts/: ui.py  ui.sh
vision/: .gitignore  CMakeLists.txt  HockusPockusVIsion.py  README.md  dialog_BGR.py  package.xml  setup.py  ui converter to py.txt
vision/UML/: InterfacesImplementations.drawio  PuckDetector.drawio
vision/config/: config.json
vision/doxygen/: DoxygenHockusPockusVision
vision/doxygen/html/: annotated.html  annotated_dup.js  class_broadcaster_1_1_broadcaster-members.html  class_broadcaster_r_o_s_1_1_broadcaster_r_o_s.html  class_broadcaster_u_s_b_1_1_broadcaster_u_s_b.html  class_broadcaster_u_s_b_1_1_broadcaster_u_s_b.js  class_camera_r_o_s_1_1_camera_r_o_s-members.html  class_camera_r_o_s_1_1_camera_r_o_s.html  class_camera_u_s_b_1_1_camera_u_s_b.html  class_puck_detector_base_1_1_puck_detector_base-members.html  class_puck_detector_base_1_1_puck_detector_base.js  class_puck_detector_builder_1_1_puck_detector_builder-members.html  class_puck_detector_builder_1_1_puck_detector_builder.html  class_puck_detector_builder_1_1_puck_detector_builder.js  class_puck_detector_configuration_1_1_puck_detector_configuration-members.html  class_puck_detector_configuration_1_1_puck_detector_configuration.html  class_puck_detector_configuration_1_1_puck_detector_configuration.js  class_puck_detector_core_1_1_puck_detector_core-members.html  class_puck_detector_core_1_1_puck_detector_core.html  class_puck_detector_core_1_1_puck_detector_core.js  class_puck_detector_r_o_s_1_1_puck_detector_r_o_s.js  class_puck_detector_u_s_b_1_1_puck_detector_u_s_b-members.html  classdialog___radius_1_1_ui___dialog___radius.html  classdialog_config_1_1dialog__config___h_s_v-members.html  classes.html  (+115 more)
vision/launch/: vision.launch
vision/scripts/: install.py  ui converter to py.txt
vision/src/: CameraROS.py  CameraUSB.py  HockusPockusVIsion.py  PuckDetectorBase.py  PuckDetectorBuilder.py  PuckDetectorConfiguration.py  PuckDetectorCore.py  PuckDetectorROS.py  PuckDetectorUSB.py  ROS_CONSTANTS.py  dialogConfig.py  dialog_Radius.py  functions.py  mainLocal.py  mainTest.py  mainVision.py  test.py
vision/ui/: DimensionsConverter.ui
webcam/: CMakeLists.txt  README.md  package.xml
webcam/launch/: webcam.launch
webcam_test/: CMakeLists.txt  package.xml
webcam_test/launch/: webcam.launch
(+348 files in other folders)
