<?xml version="1.0"?>
<package format="2">
  <name>main</name>
  <version>0.0.0</version>
  <description>The main package</description>

  <maintainer email="sexyraoul@todo.todo">sexyraoul</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>webcam</build_depend>
  <build_export_depend>webcam</build_export_depend>
  <exec_depend>webcam</exec_depend>
  <build_depend>rosbridge_server</build_depend>
  <build_export_depend>rosbridge_server</build_export_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <build_depend>ui</build_depend>
  <build_export_depend>ui</build_export_depend>
  <exec_depend>ui</exec_depend>

  <export>

  </export>
</package>
