<?xml version="1.0"?>
<package format="2">
  <name>main</name>
  <version>1.0.0</version>
  <description>The main package</description>

  <maintainer email="babw2501@usherbrooke.ca">William Babin-Demers</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>webcam</build_depend>
  <build_export_depend>webcam</build_export_depend>
  <exec_depend>webcam</exec_depend>
  <build_depend>ui</build_depend>
  <build_export_depend>ui</build_export_depend>
  <exec_depend>ui</exec_depend>
  <build_depend>vision</build_depend>
  <build_export_depend>vision</build_export_depend>
  <exec_depend>vision</exec_depend>
  <build_depend>motor_controls</build_depend>
  <build_export_depend>motor_controls</build_export_depend>
  <exec_depend>motor_controls</exec_depend>
  <build_depend>score</build_depend>
  <build_export_depend>score</build_export_depend>
  <exec_depend>score</exec_depend>
  <build_depend>simulation</build_depend>
  <build_export_depend>simulation</build_export_depend>
  <exec_depend>simulation</exec_depend>

  <export>

  </export>
</package>
