<?xml version="1.0"?>
<package format="2">
  <name>ui</name>
  <version>0.0.0</version>
  <description>The ui package</description>

  <maintainer email="sexyraoul@todo.todo">sexyraoul</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
