<?xml version="1.0"?>
<package format="2">
  <name>ui</name>
  <version>0.0.0</version>
  <description>The ui package</description>

  <maintainer email="babw2501@usherbrooke.ca">William Babin-Demers</maintainer>
  
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosbridge_server</build_depend>
  <build_export_depend>rosbridge_server</build_export_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <build_depend>web_video_server</build_depend>
  <build_export_depend>web_video_server</build_export_depend>
  <exec_depend>web_video_server</exec_depend>

  <export>

  </export>
</package>
