<?xml version="1.0"?>
<package format="2">
  <name>webcam_test</name>
  <version>0.0.0</version>
  <description>The webcam_test package</description>

  <maintainer email="victoria@todo.todo">victoria</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>libuvc_camera</build_depend>
  <build_export_depend>libuvc_camera</build_export_depend>
  <exec_depend>libuvc_camera</exec_depend>

  <export>
    
    
  </export>
</package>
